--- a/book/book.tex
+++ b/book/book.tex
@@ -33,6 +33,8 @@
 \usepackage[utf8]{inputenc}
 \usepackage[bookmarks]{hyperref}
 
+\hyphenation{Python}
+
 \title{Piensa en Python}
 \author{Allen B. Downey}
 \newcommand{\thetitle}{Piensa en Python: Aprende a pensar como un informático}
@@ -10243,7 +10245,7 @@ entre los idiomas.  Compara tus resultados con las tablas en
 
 
 \begin{exercise}
-\label{anagramas}
+\label{anagrams}
 \index{conjunto de anagramas}
 \index{anagramas!conjunto de}
 
@@ -11278,7 +11280,7 @@ parámetro:
 >>> fout = open('output.txt', 'w')
 \end{verbatim}
 %
-Si el archivo existe, abrirlo en modo escritura quita
+Si el archivo existe, abrirlo en modo escritura elimina
 los datos antiguos y comienza de nuevo, ¡así que ten cuidado!
 Si el archivo no existe, se crea uno nuevo.
 
@@ -11312,7 +11314,7 @@ Cuando hayas terminado de escribir, deberías cerrar el archivo.
 \index{método close}
 \index{close!método}
 %
-Si tú no cierras el archivo, se cierra cuando el
+Si no cierras el archivo, se cierra cuando el
 programa termina.
 
 
@@ -11445,9 +11447,9 @@ usuario con nombre {\tt dinsdale}.
 \index{trabajo!directorio de}
 
 Una cadena como \verb"'/home/dinsdale'" que identifica un archivo o un
-directorio se llama {\bf ruta} (en inglés, \em{path}).
+directorio se llama {\bf ruta} (en inglés, {\em path}).
 
-Un nombre de archivo simple, como {\tt memo.txt} también se considera una ruta,
+Un nombre de archivo simple, como {\tt memo.txt}, también se considera una ruta,
 pero es una {\bf ruta relativa} porque se relaciona con el directorio
 actual.  Si el directorio actual es {\tt /home/dinsdale}, el
 nombre de archivo {\tt memo.txt} haría referencia a {\tt /home/dinsdale/memo.txt}.
@@ -11562,7 +11564,7 @@ indicación, hay al menos 21 cosas que pueden salir mal).
 \index{sentencia try}
 \index{try!sentencia}
 
-Es mejor continuar y avanzar---y lidiar con los problemas si
+Es mejor continuar y avanzar---y lidiar con los problemas, si
 ocurren---que es exactamente lo que hace la sentencia {\tt try}.  La
 sintaxis es similar a una sentencia {\tt if...else}:
 
@@ -11734,7 +11736,7 @@ un navegador web escribiendo (por ejemplo) {\tt firefox}.
 \index{comando Unix!ls}
 
 Cualquier programa que puedes iniciar desde la shell puede también
-iniciarse desde Python usando un {\bf objeto de tubería} (en inglés, \em{pipe}), que
+iniciarse desde Python usando un {\bf objeto de tubería} (en inglés, {\em pipe}), que
 representa un programa en ejecución.
 
 Por ejemplo, el comando Unix {\tt ls -l} normalmente muestra los
@@ -11782,7 +11784,7 @@ El valor de retorno es el estado final del proceso {\tt ls};
 Por ejemplo, la mayoría de los sistemas Unix proporcionan un comando llamado {\tt md5sum}
 que lee los contenidos de un archivo y calcula una ``suma de verificación''.
 Puedes leer sobre MD5 en \url{http://en.wikipedia.org/wiki/Md5}.  Este
-comando proporciona una manera eficiente de verificar que dos filas
+comando proporciona una manera eficiente de verificar que dos archivos
 tengan los mismos contenidos.  La probabilidad de que diferentes contenidos
 entreguen la misma suma de verificación es muy pequeña (es decir, improbable que ocurra
 antes de que el universo colapse).
@@ -11851,8 +11853,8 @@ El objeto de módulo proporciona \verb"contar_lineas":
 %
 Entonces así es como escribes módulos en Python.
 
-El úlico problema con este ejemplo es que cuando importas
-el módulo ejecuta el código de prueba de la parte final.  Normalmente,
+El único problema con este ejemplo es que, cuando importas
+el módulo, ejecuta el código de prueba de la parte final.  Normalmente,
 cuando importas un módulo, este define nuevas funciones pero
 no las ejecuta.
 \index{sentencia import}
@@ -11867,7 +11869,7 @@ if __name__ == '__main__':
 \end{verbatim}
 %
 \verb"__name__" es una variable incorporada que se establece cuando
-el programa inicia.  Si el programa se está ejecutando como un script,
+se inicia el programa.  Si el programa se está ejecutando como un script,
 \verb"__name__" tiene el valor \verb"'__main__'"; en ese
 caso, el código de prueba se ejecuta.  De lo contrario,
 si el módulo se está importando, se salta el código de prueba.
@@ -11880,7 +11882,7 @@ como un script.  Luego ejecuta el intérprete de Python y
 haz {\tt import wc}.  ¿Cuál es el valor de \verb"__name__"
 cuando el módulo se está importando?
 
-Advertencia: Si importas un módulo que ya ha sido importado,
+Advertencia: si importas un módulo que ya ha sido importado,
 Python no hace nada.  No vuelve a leer el archivo, incluso si ha
 cambiado.
 \index{módulo reload}
@@ -11888,7 +11890,7 @@ cambiado.
 \index{reload!función}
 
 Si quieres volver a cargar un módulo, puedes usar la función incorporada
-{\tt reload}, pero puede ser complicado, por lo cual lo más seguro es
+{\tt reload}, pero puede ser complicada, por lo cual lo más seguro es
 reiniciar el intérprete y luego importar el módulo de nuevo.
 
 
@@ -11958,8 +11960,8 @@ contiene secuencias de formato.
 como {\tt \%d}, que especifica cómo debería ser el formato de un valor.
 \index{secuencia de formato}
 
-\item[archivo de texto:] Una secuencia de caracteres guardado en almacenamiento
-permanente como un disco duro.
+\item[archivo de texto:] Una secuencia de caracteres guardada en almacenamiento
+permanente, como en un disco duro.
 \index{archivo de texto}
 
 \item[directorio:] Una colección de archivos que tiene un nombre, también llamado carpeta.
@@ -11975,8 +11977,8 @@ permanente como un disco duro.
 en el sistema de archivos.
 \index{ruta absoluta}
 
-\item[capturar]: Evitar que una exceptión termine
-un programa utilizando las sentencias {\tt try}
+\item[capturar]: Evitar que una excepción termine
+un programa, utilizando las sentencias {\tt try}
 y {\tt except}.
 \index{capturar}
 
@@ -12000,7 +12002,7 @@ a un programa de Python ejecutar comandos y leer los resultados.
 \end{description}
 
 
-\section{Exercises}
+\section{Ejercicios}
 
 \begin{exercise}
 
@@ -12063,7 +12065,7 @@ para calcular una ``suma de verificación'' para cada archivo.  Si dos archivos 
 la misma suma de verificación, probablemente tienen los mismos contenidos.
 \index{md5sum}
 
-\item Para doble verificación, puedes utilizar el comando Unix {\tt diff}.
+\item Para una doble verificación, puedes utilizar el comando Unix {\tt diff}.
 \index{diff}
 
 \end{enumerate}
@@ -16357,7 +16359,7 @@ Ver \url{http://www.youtube.com/watch?v=k4RRi_ntQc8}.
 \index{Schmidt, Eric}
 \index{bubble sort}\index{ordenamiento de burbuja}
 
-Esto es verdad: el ordenamiento de burbuja (en inglés, \em{bubble sort}) es conceptualmente simple pero lento
+Esto es verdad: el ordenamiento de burbuja (en inglés, {\em bubble sort}) es conceptualmente simple pero lento
 para bases de datos grandes.  La respuesta que Schmidt probablemente estaba buscando es
 ``ordenamiento radix'' (\url{http://en.wikipedia.org/wiki/Radix_sort})\footnote{
 Pero si tienes una pregunta como esta en una entrevista, pienso que
@@ -16478,7 +16480,7 @@ se consideran equivalentes, incluso si tienen coeficientes diferentes.
 Un {\bf orden de crecimiento} es un conjunto de funciones cuyo comportamiento
 de crecimiento se considera equivalente.  Por ejemplo, $2n$, $100n$ y $n+1$
 pertenecen al mismo orden de crecimiento, el cual se escribe $O(n)$ en
-{\bf notación O grande} (en inglés, \em{Big-Oh}) y a menudo llamada {\bf lineal} porque cada función
+{\bf notación O grande} (en inglés, {\em Big-Oh}) y a menudo llamada {\bf lineal} porque cada función
 en el conjunto crece de manera lineal con $n$.
 \index{big-oh} \index{notación O grande}
 \index{crecimiento lineal}
